# Levo2

./: .gitignore  CMakeLists.txt  Makefile  build_debug.sh  build_release.sh  gameengine  og_skinning.rdc  sw_skinning.rdc
assets/shaders/: compile.sh
misc/: timesheet.ods
src/: entity.c  entity.h  game.c  game.h  game_types.h  main.c  player.c  player.h  widget.c  widget.h
src/asset_store/: asset_store.c  asset_store.h  json_loader.c  json_loader.h
src/cJSON/: cJSON.c
src/containers/: containers.h  string.c  string.h
src/core/input/: input.c  (+1 more)
src/game/: animation.c  animation.h  collision.c  collision.h  entity.c  entity.h  game.c  game.h  game_types.h  generator.c  generator.h  input.c  input.h  player.c  player.h
src/include/: asset_store.h  asset_types.h  bulk_data.h  bulk_data_types.h  camera.h  collision.h  containers.h  entity.h  game.h  game_types.h  input.h  json_loader.h  logger.h  math_utils.h  memory.h  platform.h  player.h  renderer.h  renderer_types.h  skinned_model.h  string_utils.h  utils.h  vulkan_backend.h  vulkan_buffer.h  vulkan_common.h  vulkan_texture.h  vulkan_types.h
src/math/: math_types.h  math_utils.c  math_utils.h
src/memory/: heap_alloc.h  memory.c  memory.h  memory_arena.c  memory_arena.h  memory_types.h
src/renderer/: sprite.c  sprite.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_common.c  vulkan_common.h  vulkan_renderer.c  vulkan_renderer.h  vulkan_texture.c  vulkan_texture.h  vulkan_types.h
src/systems/: animation.c  animation.h  collision.c  collision.h
src/utils/: json_loader.c  json_loader.h  utils.c  utils.h
(+89 files in other folders)
